--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "validator": "^13.15.26",
+    "xss-clean": "^0.1.4"
   }
 }
